# superbiz_ongoing

./: .gitignore  db.sqlite3  main.py  package-lock.json  package.json  pyproject.toml  ruff.toml
apps/accounts/templates/: register.html
apps/catalog/: admin.py  forms.py  urls.py  views.py
apps/catalog/migrations/: 0001_initial.py  0002_company_created_at_company_updated_at.py  0003_alter_company_options_remove_company_address_and_more.py  0004_remove_company_company_bpcode_company_company_active_and_more.py  0005_rename_company_bfaxpcode_company_company_bpcode.py  0006_alter_company_company_active.py  0007_alter_company_company_active_and_more.py  0008_alter_company_currency_deci.py  0009_sale.py  0010_companysale.py  0011_alter_companysale_options.py  0012_company_image.py
apps/catalog/models/: __init__.py  company.py  company_sale.py  sale.py
apps/catalog/templates/finance/: company_create.html  company_edit.html  company_list.html  company_sales_create.html  sales_create.html  sales_edit.html  sales_list.html
apps/catalog/templates/finance/partials/: ptbcompany.html  ptbsales.html  sale_company.html
config/: settings.py  urls.py
static/css/: input.css  output.css
templates/: base.html
templates/components/: footer.html  sidebar.html  topbar.html
