[project]
name = "superbiz-ongoing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=6.0.1",
    "django-debug-toolbar>=6.1.0",
    "requests>=2.32.5",
    "ruff>=0.14.11",
]

[dependency-groups]
dev = [
    "django-browser-reload>=1.21.0",
    "djlint>=1.36.4",
    "ruff>=0.14.11",
]
